# Terminal-Guard

./: .gitignore  Cargo.toml  Makefile  README.md  setup.yaml  test.txt
src/: config.rs  lua_proc.rs  main.rs  pty_process.rs  select_process.rs  utilities.rs
tests/: cli.rs  test.txt
